# text-cleaner

./: .gitignore  CMakeLists.txt  README.md  base.u16  diff--dictionary-u16.u16  diff--dictionary-utf8.txt  filtered--dictionary-u16.u16  main.cpp  new.u16
examples/: dictionary.u16  new-4.txt  new-5.txt  new-6.txt  new-7.txt
